# PRINet-3.0.0

./: .coderabbit.yaml  .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  reproduce.py
.github/: README.md
.github/workflows/: ci.yml  lint.yml  release.yml
Docs/test_and_benchmark_results/: y2q2_f2_ab_test_results.json
benchmarks/: README.md  activation_profile.py  clevr_n.py  concurrent_2regime_benchmark.py  concurrent_3regime_benchmark.py  coupling_complexity_benchmark.py  desync_catastrophe.py  goldilocks_sustained_benchmark.py  goldilocks_sustained_cpu_benchmark.py  gpu_benchmarks.py  heterogeneous_gpu_cpu_benchmark.py  holomorphic_profile.py  mnist_subset.py  multirate_triton_benchmark.py  on_stress_benchmark.py  on_vs_onlogn_benchmark.py  oscillator_scaling.py  oscillobench.py  pairwise_coupling_scaling.py  phase1_bf_extension.py  phase1_bf_tost_resolution.py  phase1_statistical_hardening.py  phase2_scaling_analysis.py  phase3_scientific_experiments.py  phase4_theoretical_verification.py  phase_diagram.py  phase_to_rate_benchmark.py  q2_benchmarks.py  q4_benchmarks.py  run_clevr_n_sweep.py  run_q17_individual.py  run_q18_individual.py  run_q19_individual.py  scalr_vs_adam_benchmark.py  scientific_coupling_benchmark.py  subconscious_benchmark.py  triton_fused_kernel_benchmark.py  y2q1_benchmarks.py  y2q2_benchmarks.py  y2q3_benchmarks.py  (+19 more)
benchmarks/results/: README.md  benchmark_y4q1_2_ablation_convergence.json  benchmark_y4q1_2_ablation_extended.json  benchmark_y4q1_3_cosine_vs_uniform.json  (+168 more)
docs/: API_Reference_Coupling_Topologies.md  Architecture_Guide.md  Capacity_Analysis.md  Getting_Started_Tutorial.md  README.md  architecture.rst  conf.py  getting_started.rst  index.rst  requirements.txt
figures/: README.md
models/: README.md  subconscious_controller.onnx  subconscious_controller.onnx.data
notebooks/: 01_oscillosim_quickstart.ipynb  02_clevr_n_binding.ipynb  03_custom_coupling.ipynb  README.md
paper/: LICENSE  README.md  main.tex  neurips_2026.sty  supplementary.tex
src/: README.md
tables/: README.md  tab_efficiency.tex  tab_occlusion.tex  tab_stress.tex  tab_supercritical.tex
tests/: README.md  test_clevr_n.py  test_core.py  test_gpu.py  test_hierarchical.py  test_hybrid.py  test_integration_q3.py  test_nn.py  test_phase_to_rate.py  test_phases.py  test_q2.py  test_q2_remaining.py  test_q3_new.py  test_scalr_enhanced.py  test_subconscious.py  test_triton_kernels.py  test_utils.py  test_y2q1.py  test_y2q2.py  test_y2q3.py  test_y2q4.py  test_y3q1.py  test_y3q2.py  test_y3q3.py  test_y3q4.py  test_y3q45.py  test_y3q49.py  test_y4q1.py  test_y4q1_2.py  test_y4q1_3.py  test_y4q1_4.py  test_y4q1_5.py  test_y4q1_7.py  test_y4q1_8.py  test_y4q1_9.py  test_y4q2.py  test_y4q3.py  test_y4q4.py
(+58 files in other folders)
